--- a/src/App.css
+++ b/src/App.css
@@ -159,7 +159,7 @@ h2 {
   font-weight: 700;
   color: transparent;
   transition: font-weight 100ms;
-  background: linear-gradient(90deg,
+  /* background: linear-gradient(90deg,
       var(--rainbow-1),
       var(--rainbow-2),
       var(--rainbow-4),
@@ -171,12 +171,13 @@ h2 {
       var(--rainbow-4),
       var(--rainbow-3),
       var(--rainbow-2));
-  animation: animate 5s linear infinite;
+  animation: animate 5s linear infinite; */
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
   text-decoration: none;
-  background-size: 200% 100%;
+  /* background-size: 200% 100%; */
+  background-image: url("../public/assets/TextBG.png");
 }
 
 
@@ -191,7 +192,7 @@ h2 {
 
 .glow,
 .hover-glow:hover {
-  background: linear-gradient(90deg,
+  /* background: linear-gradient(90deg,
       var(--rainbow-1),
       var(--rainbow-2),
       var(--rainbow-4),
@@ -202,23 +203,24 @@ h2 {
       var(--rainbow-5),
       var(--rainbow-4),
       var(--rainbow-3),
-      var(--rainbow-2));
-  animation: animate 5s linear infinite;
+      var(--rainbow-2)); */
+    background-image: url("../public/assets/TextBG.png");
+  /* animation: animate 5s linear infinite; */
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
   text-decoration: none;
-  background-size: 200% 100%;
+  /* background-size: 200% 100%; */
   position: relative;
 }
 
 .glow:after {
-  content: "";
+  /* content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  /* height: 100%;
   background: linear-gradient(180deg,
       var(--rainbow-1),
       var(--rainbow-2),
@@ -230,8 +232,8 @@ h2 {
       var(--rainbow-5),
       var(--rainbow-4),
       var(--rainbow-3),
-      var(--rainbow-2));
-  filter: blur(100px);
+      var(--rainbow-2)); 
+  filter: blur(100px);*/
 }
 
 
