--- a/src/styles/events.css
+++ b/src/styles/events.css
@@ -110,6 +110,11 @@
     width: 100%;
 }
 
+.event-photos {
+    display: flex;
+
+}
+
 @media screen and (max-width: 1100px) {
     .event-card-desc {
         width: 90%;
