--- a/src/styles/tmu.css
+++ b/src/styles/tmu.css
@@ -12,3 +12,15 @@
     text-align: center;
     padding: 0 24px 0 24px;
 }
+
+.tmu-project {
+    box-shadow: 0px 0px 8px 1px var(--box-glow);
+    /* border-radius: 16px; */
+    border: 4px solid var(--blue-text);
+    max-width: 90vw;
+    position: relative;
+}
+
+.moon .iframe-ctr {
+    max-width: 100%;
+}
