--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -31,8 +31,7 @@
 
 .project-card:hover,
 .event-card:hover,
-.t-event-card:hover
-{
+.t-event-card:hover {
   box-shadow: 0px 0px 32px 8px var(--box-glow);
   transition: 200ms
 }
@@ -59,6 +58,7 @@
   width: 100vw;
 }
 
+
 .iframe-ctr-card {
   border: none;
   width: 100%;
@@ -67,6 +67,13 @@
   display: flex;
   justify-content: center;
   background-color: var(--box);
+}
+
+.audio-iframe {
+  padding: 0;
+  margin: 20px;
+  width: 50vw;
+  height: 200px;
 }
 
 .secondary-iframe-ctr {
