--- a/src/styles/playscape.css
+++ b/src/styles/playscape.css
@@ -5,16 +5,32 @@
 }
 
 .playscape-p {
-    text-align: center;
-    padding: 0 6vw;
+    text-align: justify;
+    margin: 0 6vw;
+    padding: 16px;
+    box-shadow: 0px 0px 8px 1px var(--box-glow);
+    border: 1px solid var(--blue-text);
 }
+
+.playscape-div {
+    text-align: justify;
+    margin: 0 6vw;
+    padding: 16px;
+    /* box-shadow: 0px 0px 8px 1px var(--box-glow);
+    border: 1px solid var(--blue-text); */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 
 .playscape-event-line {
     color: var(--blue-text);
-
 }
 
-
+.playscape-tickets {
+    margin: 24px 0;
+}
 
 .playscape-event-line:hover {
     color: var(--bg);
