--- a/src/styles/tools.css
+++ b/src/styles/tools.css
@@ -12,6 +12,10 @@
     align-items: center;
 }
 
+.tools-exp{
+    margin: 0 10%;
+}
+
 .tools-body>.img-ctr>img {
     width: 100vw;
     margin: 0;
@@ -165,4 +169,12 @@
         text-align: center;
         margin: 0 auto
     }
+    .tools-div{
+        flex-direction: column;
+        align-items: center;
+    }
+    .tools-img,
+.tools-desc{
+    width: 90%;
+}
 }
