--- a/src/styles/sylvan.css
+++ b/src/styles/sylvan.css
@@ -9,6 +9,17 @@
     display: flex;
     flex-direction: column;
 }
+.sylvan-gif {
+    box-shadow: 0px 0px 8px 1px var(--box-glow);
+    border: 4px solid var(--blue-text);
+    position: relative;
+    padding: 16px 0;
+    width: 40vw;
+    left: 30vw;
+    margin-top: 24px;
+    display: flex;
+    flex-direction: column;
+}
 
 .funders-imgs {
     display: flex;
