--- a/src/styles/sylvan.css
+++ b/src/styles/sylvan.css
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
 }
+
 .sylvan-gif {
     box-shadow: 0px 0px 8px 1px var(--box-glow);
     border: 4px solid var(--blue-text);
@@ -60,10 +61,11 @@
     flex-direction: row;
     justify-content: space-around;
     padding: 0 8px;
-
+    height: auto;
 }
 
 .sylvan-images>img {
     width: 40%;
+    height: fit-content;
     padding: 8px;
 }
